fixed auth input being too small

--- a/src/components/auth/AuthView.css
+++ b/src/components/auth/AuthView.css
@@ -100,3 +100,7 @@
     opacity: 0;
     z-index: 0;
 }
+
+.input--auth {
+    width: auto;
+}
